--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     implementation libs.material
     implementation libs.androidx.activity
     implementation libs.androidx.constraintlayout
+    // Coil
+    implementation libs.coil
     // View Model
     implementation libs.androidx.lifecycle.viewmodel.ktx
     implementation libs.androidx.activity.ktx
