--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,11 @@ dependencies {
     // Retrofit & Moshi
     implementation libs.retrofit
     implementation libs.retrofit2.converter.moshi
+    // CameraX
+    implementation libs.androidx.camera.camera2
+    implementation libs.androidx.camera.lifecycle
+    implementation libs.androidx.camera.view
+    // Testing
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
