- Se agrego el modulo de machine learning para identificar el perro a traves de la camara y poderlo agregar a nuestra lista de perros.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,9 @@ dependencies {
     implementation libs.androidx.camera.camera2
     implementation libs.androidx.camera.lifecycle
     implementation libs.androidx.camera.view
+    // Tensorflow
+    implementation libs.tensorflow.lite
+    implementation libs.tensorflow.lite.support
     // Testing
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
